# markov-fit

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  args.cpp  args.h  cdf.cpp  cdf.h  constants.h  generate_dist.m  generator.cpp  generator.h  markov.cpp  markov.h  sample.h  test.cpp  tried.txt
2ndTry/: .project
2ndTry/src/: Difference.java  Expression.java  Matrix.java  One.java  PrintIt.java  Product.java  Sum.java  Value.java  Variable.java  Zero.java
alias/: Makefile.am
expm/: mexp.cpp  mexp.h
expr/: Dictionary.cpp  Dictionary.h  ExprMultiply.cpp  ExprMultiply.h  ExprOne.cpp  ExprOne.h  ExprParent.cpp  ExprParent.h  ExprValue.cpp  ExprValue.h  ExprVariable.cpp  ExprVariable.h  ExprZero.cpp  ExprZero.h  Expression.c  Expression.h  ExpressionRename.cpp  ExpressionRename.h  Matrix.cpp  Matrix.h  expressions.h  test.cpp
expressions/: .cproject  .project  CMakeLists.txt  Expression.c  create_matrix_exp.cpp  create_matrix_exp.h  expressions.h  test.cpp  util.h
expressions/expr/: Dictionary.cpp  Dictionary.h  ExprAddition.cpp  ExprAddition.h  ExprDivision.cpp  ExprDivision.h  ExprMatrix.cpp  ExprMatrix.h  ExprMultiply.cpp  ExprMultiply.cpp.bak  ExprMultiply.h  ExprMultiply.h.bak  ExprNegation.cpp  ExprNegation.h  ExprOne.cpp  ExprOne.h  ExprParent.cpp  ExprParent.h  ExprPower.cpp  ExprPower.h  ExprSubtraction.cpp  ExprSubtraction.h  ExprValue.cpp  ExprValue.h  ExprVariable.cpp  ExprVariable.h  ExprZero.cpp  ExprZero.h  Expression.h  ExpressionOutputFlags.cpp  ExpressionOutputFlags.h  ExpressionRename.cpp  ExpressionRename.h  Matrix.h  Result.cpp  Result.h  SimplificationRules.cpp  SimplificationRules.h
expressions/parsers/: Makefile  calc.lex  calc.y  parser.h  parser_utils.cpp  parser_utils.h
local/: LocalGeneticSearchParams.cpp  LocalGeneticSearchParams.h  Mutation.cpp  Mutation.h  local_search.cpp  local_search.h  local_search_params.cpp  local_search_params.h  mutation.cpp  mutation.h
markov/: args.cpp  generator.cpp  generator.h  markov.cpp  markov.h  markov_chain.h  markov_simulator.h  mexp.h
matlab/: matrix_exp.cpp  matrix_exp.h
objective/: .cproject  CMakeLists.txt  constants.h  run_all.m  test.cpp
objective/alias/: Makefile.in
objective/global/: genetic_algorithm.h  random_search.cpp  random_search.h
objective/local/: local.cpp  local_search.cpp  local_search.h  local_search_params.cpp  local_search_params.h  mutation.cpp
objective/markov/: generator.cpp  generator.h  markov_chain.cpp  markov_simulator.cpp  markov_simulator.h  mexp.cpp
objective/matlab/: TestGlobal.m  call_direct.m  create_cdf.m  create_stencil.m  get_cost.m  run.sh
objective/stats/: cdf.cpp  cdf.h
objective/test/: test_distributions.cpp  test_distributions.h
python/: _chi2.c  chi2.h  info  mine.py  myfunc.py  script.sh  setup.py
